--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
-<html lang="en">
+﻿<html lang="en">
 <head>
+    <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-7P8G6MP4Q6"></script>
 <script>
@@ -9,31 +11,77 @@
 
   gtag('config', 'G-7P8G6MP4Q6');
 </script>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>RTSTUDIOS Watchlist</title>
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins&display=swap" rel="stylesheet">
   <style>
     /* ▸▸ your existing styles stay the same … ◂◂ */
     /* (they’re collapsed here for brevity)                                      */
     /* ------------------------------------------------------------------------ */
-    body{font-family:'Poppins',sans-serif;background:radial-gradient(circle at top,#0e0e0e 20%,#1a1a1a 100%);color:#fff;max-width:700px;margin:30px auto;padding:30px;border-radius:15px;position:relative;overflow-y:auto;box-shadow:0 0 15px rgba(0,0,0,.35);background-image:url('https://www.transparenttextures.com/patterns/asfalt-dark.png');background-repeat:repeat}
-    body::before{content:"";position:absolute;inset:-10px;border-radius:inherit;pointer-events:none;z-index:9998;box-shadow:0 0 10px #c08081,0 0 20px #cc6666,0 0 40px #c08081,0 0 80px #c08081,inset 0 0 10px #fff3bd,inset 0 0 20px #c08081,inset 0 0 40px #c08081;animation:flicker 3.5s infinite}
-    @keyframes flicker{0%,19%,21%,23%,25%,54%,56%,100%{opacity:1}20%,24%,55%{opacity:.4}}
-    h2{font-family:'Bebas Neue',cursive;font-size:32px;text-align:center;color:#e50914;letter-spacing:2px;margin-bottom:20px;z-index:1;position:relative}
-    input[type=text]{border:solid;border-radius:20px;padding:10px;font-family:'Arial Black',sans-serif;font-size:16px;width:65%;margin:10px 0;background:#2a2a2a;color:#fff;box-shadow:0 0 20px 5px #000}
-    button{border-radius:20px;padding:10px 18px;font-family:'Arial Black',sans-serif;font-size:16px;width:auto;white-space:nowrap;margin:10px 0;background:maroon;color:#fff;transition:background .3s,transform .2s;box-shadow:0 0 10px rgba(229,9,20,.4);cursor:pointer}
-    button:hover{background:#ff3333;transform:scale(1.05)}
+    
+    body {
+        font-family: sans-serif;
+      background-color: #121212;
+      color: #ffffff;
+      max-width: 600px;
+      margin: 30px auto;
+      padding: 20px;
+      border-radius: 15px;
+      background: linear-gradient(145deg, #1e1e1e, #1c1c1c);
+      box-shadow: 0 0 10px rgba(0,0,0,0.6); 
+      }
+
+    input[type="text"] {
+      padding: 10px;
+      font-size: 16px;
+      width: 70%;
+      margin-bottom: 10px;
+    font-family:'Arial Black',sans-serif;
+    font-size:16px;}
+    button{ padding: 10px;
+      font-size: 16px;
+      cursor: pointer;
+      background-color: #03dac6;
+      border: none;
+      color: #ffffff;
+      border-radius: 5px;
+      margin-left: 5px;
+      font-family: 'Arial Black',sans-serif;
+    transition:background .3s,transform .2s;cursor:pointer}
+    button:hover{
+        background:#151B54;transform:scale(1.05)}
     ul{list-style:none;padding:0;z-index:1;position:relative}
-    li{margin:12px 0;background:rgba(40,40,40,.85);padding:12px;border-radius:10px;display:flex;align-items:center;justify-content:space-between; flex-wrap: wrap;
+    li{
+        margin:12px 0;background:rgba(65, 64, 66);
+        padding:12px;border-radius:10px;
+        display:flex;
+        align-items:center;
+        justify-content:space-between;
+         flex-wrap: wrap;
        box-shadow:0 0 15px rgba(229,9,20,.2);transition:transform .2s}
     li:hover{transform:scale(1.01)}li span{flex-grow:1;margin-left:10px}
-    .floating-text{position:fixed;z-index:0;font-size:30px;font-family:'Bebas Neue',cursive;color:rgba(255,255,255,.05);animation:moveRT 30s linear infinite;pointer-events:none;font-weight:200;text-align:center;text-shadow:2px 2px 0 rgba(255,255,255,.08),4px 4px 0 rgba(0,0,0,.15)}
-    @keyframes moveRT{0%{transform:translateY(-100vh) rotate(0)}100%{transform:translateY(100vh) rotate(360deg)}}
-    .rt-banner{position:fixed;bottom:20px;left:50%;transform:translateX(-50%);padding:1.5rem 2rem;background:rgba(10,10,10,.85);border-radius:12px;border:1px solid #555;box-shadow:0 0 20px rgba(255,255,255,.1);color:#fff;font-family:'Georgia',serif;text-align:center;z-index:9999;animation:lightning-in 4s ease-out,show-then-hide 10s ease forwards;pointer-events:none}
-    .rt-glow{font-size:1.1rem;color:#f8e9b0;text-shadow:0 0 5px #fff3bd,0 0 10px #ffe98e,0 0 20px #ffd700;animation:flicker 3.5s infinite}
-    .rt-glow strong{display:block;margin-top:.5rem;font-size:1.8rem;color:#fdf6c9;text-shadow:0 0 5px #fff,0 0 10px #ffe95e,0 0 25px #ffdd00,0 0 40px #ffe34d}
-    @keyframes lightning-in{0%{opacity:0;transform:translateX(-50%) scale(.8);filter:brightness(1)}20%{opacity:1;transform:translateX(-50%) scale(1);filter:brightness(2.5)}40%{filter:brightness(1)}60%{filter:brightness(2)}80%{filter:brightness(1.2)}100%{filter:brightness(1)}}
+    .floating-text{
+        position:fixed;z-index:0;font-size:30px;
+        font-family:'Bebas Neue',cursive;color:rgba(255,255,255,.05);
+        animation:moveRT 30s linear infinite;pointer-events:none;font-weight:200;
+        text-align:center;text-shadow:2px 2px 0 rgba(255,255,255,.08),4px 4px 0 rgba(0,0,0,.15)}
+    @keyframes moveRT{
+        0%{transform:translateY(-100vh) rotate(0)}100%{transform:translateY(100vh) rotate(360deg)}}
+    .rt-banner{
+        position:fixed;bottom:20px;left:50%;transform:translateX(-50%);padding:1.5rem 2rem;
+        background:rgba(10,10,10,.85);
+        border-radius:12px;border:1px solid #555;
+        box-shadow:0 0 20px rgba(255,255,255,.1);color:#fff;font-family:'Georgia',serif;
+        text-align:center;z-index:9999;animation:lightning-in 4s ease-out,show-then-hide 10s ease forwards;pointer-events:none}
+    .rt-glow{
+        font-size:1.1rem;color:#f8e9b0;text-shadow:0 0 5px #fff3bd,0 0 10px #ffe98e,0 0 20px #ffd700;
+        animation:flicker 3.5s infinite}
+    .rt-glow strong{
+        display:block;margin-top:.5rem;
+        font-size:1.8rem;color:#fdf6c9;
+        text-shadow:0 0 5px #fff,0 0 10px #ffe95e,0 0 25px #ffdd00,0 0 40px #ffe34d}
+    @keyframes lightning-in{0%{
+        opacity:0;transform:translateX(-50%) scale(.8);filter:brightness(1)}20%{opacity:1;transform:translateX(-50%) scale(1);
+            filter:brightness(2.5)}40%{filter:brightness(1)}60%{filter:brightness(2)}80%{filter:brightness(1.2)}100%{filter:brightness(1)}}
     @keyframes show-then-hide{0%,80%{opacity:1}100%{opacity:0;visibility:hidden}}
 
     /* === NEW: autocomplete dropdown === */
@@ -71,29 +119,29 @@
 <body>
 
   <!-- Floating watermarks -->
-  <div class="floating-text" style="top: 10%; left: 10%;">RTSTUDIOS</div>
-  <div class="floating-text" style="top: 30%; left: 70%;">RTSTUDIOS</div>
-  <div class="floating-text" style="top: 60%; left: 40%;">RTSTUDIOS</div>
-  <div class="floating-text" style="top: 80%; left: 20%;">RTSTUDIOS</div>
+  <div class="floating-text" style="top: 10%; left: 10%;">ROTSTUDIO</div>
+  <div class="floating-text" style="top: 30%; left: 70%;">ROTSTUDIO</div>
+  <div class="floating-text" style="top: 60%; left: 40%;">ROTSTUDIO</div>
+  <div class="floating-text" style="top: 80%; left: 20%;">ROTSTUDIO</div>
 
   <!-- Login -->
   <input type="text" id="usernameInput" placeholder="Enter your name...">
   <button onclick="loginUser()">Login</button>
-  <p id="welcomeText" style="color: black;"></p>
+  <p id="welcomeText" style="color: #ffffff;"></p>
 
   <!-- Add series -->
   <div style="position:relative;">
     <input type="text" id="seriesInput" placeholder="Enter series name..." disabled autocomplete="off">
     <!-- NEW dropdown -->
     <div id="autocomplete"></div>
-  </div>  <button onclick="addSeries()">Add</button>
+<button onclick="addSeries()">Add</button>
 
   <!-- List -->
   <ul id="seriesList"></ul>
 
   <!-- Banner -->
   <div class="rt-banner">
-    <div class="rt-glow">Brought to you by<br><strong>RTSTUDIOS</strong></div>
+    <div class="rt-glow">Sponsored by<br><strong>ROTSTUDIO</strong></div>
   </div>
 <a href="https://t.me/rtmoviesera" target="_blank">
   <button style="
