--- a/Watch.html
+++ b/Watch.html
@@ -139,7 +139,7 @@ body {
   <script>
     const TMDB_KEY = "276ce1441c92d4989b5a0080e47e0633";
     const IMG_BASE = "https://image.tmdb.org/t/p/w92";
-    const API_BASE = "http://localhost:4000"; // 👈 change later to your deployed backend URL
+    const API_BASE = "https://rtwatch-backend-production.up.railway.app"; // 👈 backend URL
 
     let currentUser = null;
     let authToken = null;
