--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@ body {
 </head>
 <body>
   <!-- Floating watermarks -->
-  <div class="floating-text" style="top: 10%; left: 10%;">ROTSTUDIO</div>
-  <div class="floating-text" style="top: 30%; left: 70%;">ROTSTUDIO</div>
-  <div class="floating-text" style="top: 60%; left: 40%;">ROTSTUDIO</div>
-  <div class="floating-text" style="top: 80%; left: 20%;">ROTSTUDIO</div>
+  <div class="floating-text" style="top: 10%; left: 10%;">ROTWAVE</div>
+  <div class="floating-text" style="top: 30%; left: 70%;">ROTWAVE</div>
+  <div class="floating-text" style="top: 60%; left: 40%;">ROTWAVE</div>
+  <div class="floating-text" style="top: 80%; left: 20%;">ROTWAVE</div>
 
   <!-- Login -->
   <input type="text" id="usernameInput" placeholder="Enter your name...">
@@ -139,7 +139,7 @@ body {
 
   <!-- Banner -->
   <div class="rt-banner">
-    <div class="rt-glow">Sponsored by<br><strong>ROTSTUDIO</strong></div>
+    <div class="rt-glow">Sponsored by<br><strong>ROTWAVE</strong></div>
   </div>
 
   <a href="https://t.me/rtmoviesera" target="_blank">
